// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperRewards harvest (own escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 115345,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 117499,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 78979,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 149320,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 151474,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 95168,
}
`;

exports[`KeeperRewards set min rewards oracles succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32275,
}
`;

exports[`KeeperRewards update rewards succeeds 1`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 140727,
}
`;

exports[`KeeperRewards update rewards succeeds 2`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 123651,
}
`;

exports[`KeeperRewards update rewards succeeds with all signatures 1`] = `
Object {
  "calldataByteLength": 1156,
  "gasUsed": 146919,
}
`;
